--- a/mysql/docker/php/Dockerfile
+++ b/mysql/docker/php/Dockerfile
@@ -7,6 +7,7 @@ RUN apt-get update && apt-get install -y git
 RUN docker-php-ext-install pdo pdo_mysql mysqli
 RUN a2enmod rewrite
 
+COPY /bkp/*.php /var/www/html/
 ADD /bkp/*.tar.gz /var/www/
 
 EXPOSE 80/tcp
